# QML-PySide6-template

./: .gitignore  main.py  pyproject.toml  run.py
backend/: controller.py
ressources/: qmldir
ressources/style/: LayoutMetrics.qml  SVGLibrary.qml  Typography.qml
src/app_name/backend/: controller.py  language_manager.py
src/app_name/backend/viewmodels/: __init__.py  base_vm.py  main_vm.py  settings_vm.py
src/app_name/resources/assets/fonts/: fonts.json
src/app_name/resources/assets/languages/: de.json  en.json  es.json  fr.json  it.json
src/app_name/resources/data/: UiData.qml
src/app_name/resources/runtime/: CurrentTheme.json  Settings.json
src/app_name/resources/style/: LayoutMetrics.qml  Metrics.qml  SVGLibrary.qml  Theme.qml  Typography.qml
src/app_name/resources/style/themes/: Dracula.json  Everforest.json  Monokai.json  (+1 more)
src/app_name/ressources/: qmldir
src/app_name/ressources/data/: UiData.qml
src/app_name/ressources/style/: ASCIIart.qml  LayoutMetrics.qml  Metrics.qml  SVGLibrary.qml  Theme.qml  Typography.qml
src/app_name/ui/: main.qml
src/app_name/ui/components/: qmldir
src/qml_pyside6_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ui/: main.qml  qmldir
ui/Components/: qmldir
ui/Components/controls/: ComboBox.qml  TabBar.qml
ui/Components/layout/: Rect.qml
ui/components/controls/: Button.qml  IconButton.qml  SpinBox.qml
ui/components/indicators/: SVGObject.qml  Title.qml
ui/components/layout/: TopBar.qml
ui/components/popups/: ToolTip.qml
ui/components/settings/: CustomShortcutEditor.qml  Settings.qml
(+29 files in other folders)
